--- a/HTML/team_join_form.html
+++ b/HTML/team_join_form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Student Project Status</title>
-    <link rel="stylesheet" href="../CSS/team_detail_filling_form.css" />
+    <link rel="stylesheet" href="../CSS/team_join_form.css" />
   </head>
   <body>
     <div class="status">
