--- a/HTML/student_form_submission.html
+++ b/HTML/student_form_submission.html
@@ -20,7 +20,7 @@
         </tr>
         <tr>
           <td class="form-link">
-            <a href="#link-of-form1">Major / Minor Project Abstract [Form 1]</a>
+            <a href="#link-of-form1">Project Abstract Form [Form 1]</a>
           </td>
           <td><button class="upload-btn">Upload</button></td>
         </tr>
