--- a/HTML/admin_portal.html
+++ b/HTML/admin_portal.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Admin Portal</title>
+    <title>Home</title>
     <link rel="stylesheet" href="../CSS/admin_portal.css" />
   </head>
   <body>
@@ -18,9 +18,14 @@
         <a href="../HTML/mentor_status_admin.html">Mentor Status</a>
       </button>
       <button class="btn">
-        <a href="../HTML/Team_status_admin.html">Team Status</a>
+        <a href="../HTML/admin_team_overview.html">Team Status</a>
       </button>
-      <button class="btn"><a href="">Approve Docs</a></button>
+      <button class="btn">
+        <a href="../HTML/approve_docs.html">Approve Docs</a>
+      </button>
+      <button class="btn">
+        <a href="../HTML/admin_upload.html">Upload docs</a>
+      </button>
     </div>
   </body>
 </html>
