--- a/HTML/login.html
+++ b/HTML/login.html
@@ -23,5 +23,10 @@
         <button class="signin-button">SIGN IN</button>
       </div>
     </div>
+    <div style="position: fixed;bottom: 0;right: 0;">
+      <a href="../HTML/admin_portal.html">Admin</a>
+      <a href="../HTML/mentor_portal.html">Mentor</a>
+      <a href="../HTML/student_portal.html">Student</a>
+    </div>
   </body>
 </html>
