--- a/HTML/student_form_submission.html
+++ b/HTML/student_form_submission.html
@@ -20,13 +20,23 @@
         </tr>
         <tr>
           <td class="form-link">
-            <a href="#link-of-form1">Major / Minor Project Abstract [Form 1]</a>
+            Project Abstract [Form 1]
           </td>
-          <td><button class="upload-btn">Upload</button></td>
+          <td>
+            <button class="upload-btn" onclick="location.href='form1.html'">
+              Fill
+            </button>
+          </td>
         </tr>
         <tr>
-          <td class="form-link">Role Specification of Team Members [Form 2]</td>
-          <td><button class="upload-btn">Upload</button></td>
+          <td class="form-link">
+            Role Specification of Team Members [Form 2]
+          </td>
+          <td>
+            <button class="upload-btn" onclick="location.href='form2.html'">
+              Fill
+            </button>
+          </td>
         </tr>
         <!-- used by mentor code to get the form 3 which is weekly status submission -->
         <!-- <tr>
