--- a/HTML/student_portal.html
+++ b/HTML/student_portal.html
@@ -15,9 +15,19 @@
     </div>
     <div class="button">
       <button class="btn">
-        <a href="/HTML/student_project_status.html">Project Status</a>
+        <a href="/HTML/team_join_form.html">My Team</a> <!-- This will route to team_view page once a student is in the team -->
+        <!--  -->
       </button>
-      <button class="btn"><a href="">Form Submission</a></button>
+      <button class="btn">
+        <a href="/HTML/student_project_status.html">My Progress</a>
+      </button>
+      <!-- Only to be shown to leaders of the team -->
+      <button class="btn">
+        <a href="/HTML/student_form_submission.html">Form Submissions</a>
+      </button>
+      <button class="btn">
+        <a href="/HTML/project_details_filling.html">Fill Project Details</a>
+      </button>
     </div>
   </body>
 </html>
