--- a/HTML/mentor_portal.html
+++ b/HTML/mentor_portal.html
@@ -15,12 +15,14 @@
     </div>
     <div class="button">
       <button class="btn">
-        <a href="/HTML/team_selection_page.html">Selection</a> 
+        <a href="/HTML/mentor_team_selection.html">Team Selection</a>
       </button>
       <button class="btn">
-        <a href="/HTML/team_management_page.html">Management</a>
+        <a href="/HTML/mentor_dashboard.html">Dashboard</a>
       </button>
-      <button class="btn"><a href="">Approve Docs.</a></button>
+      <button class="btn">
+        <a href="/HTML/approve_docs.html">Approve Docs</a>
+      </button>
     </div>
   </body>
 </html>
