--- a/HTML/admin_portal.html
+++ b/HTML/admin_portal.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>Admmin Portal</title>
     <link rel="stylesheet" href="../CSS/admin_portal.css" />
   </head>
   <body>
