--- a/HTML/student_portal.html
+++ b/HTML/student_portal.html
@@ -15,7 +15,7 @@
     </div>
     <div class="button">
       <button class="btn">
-        <a href="/HTML/team_join_form.html">My Team</a> <!-- This will route to team_view page once a student is in the team -->
+        <a href="/HTML/team_join_form.html">My Team</a>
         <!--  -->
       </button>
       <button class="btn">
