document approval page

--- a/HTML/admin_portal.html
+++ b/HTML/admin_portal.html
@@ -21,7 +21,7 @@
         <a href="../HTML/admin_team_overview.html">Team Status</a>
       </button>
       <button class="btn">
-        <a href="../HTML/approve_docs.html">Approve Docs</a>
+        <a href="../HTML/document_approval.html">Approve Docs</a>
       </button>
       <button class="btn">
         <a href="../HTML/admin_upload.html">Upload docs</a>
