--- a/HTML/mentor_portal.html
+++ b/HTML/mentor_portal.html
@@ -21,7 +21,7 @@
         <a href="/HTML/mentor_dashboard.html">Dashboard</a>
       </button>
       <button class="btn">
-        <a href="/HTML/approve_docs.html">Approve Docs</a>
+        <a href="/HTML/document_approval.html">Approve Docs</a>
       </button>
     </div>
   </body>
